--- a/resources/css/buttons.css
+++ b/resources/css/buttons.css
@@ -6,6 +6,10 @@
     @apply px-6 py-3 rounded bg-impii text-sm leading-4 font-bold whitespace-nowrap hover:bg-orange-400 focus:bg-orange-400;
 }
 
+.btn-emergency {
+    @apply px-6 py-3 rounded bg-red-500 text-sm leading-4 font-bold whitespace-nowrap hover:bg-orange-400 focus:bg-orange-400;
+}
+
 .btn-spinner,
 .btn-spinner:after {
   border-radius: 50%;
